branches/paolo/SOURCES/ModelGenerator/GspnParser/Gspn-parser.output
Terminaux inutilisés dans la grammaire

   chr
   GspnName


Grammaire

    0 $accept: GSPN "end of file"

    1 IntStringFormula: ival
    2                 | str
    3                 | LB IntStringFormula RB
    4                 | IntStringFormula PLUS IntStringFormula
    5                 | IntStringFormula MINUS IntStringFormula
    6                 | IntStringFormula MUL IntStringFormula
    7                 | IntStringFormula POWER IntStringFormula
    8                 | FLOOR LB IntStringFormula RB
    9                 | FLOOR LB IntStringFormula DIV IntStringFormula RB
   10                 | MIN LB IntStringFormula COMMA IntStringFormula RB
   11                 | MAX LB IntStringFormula COMMA IntStringFormula RB

   12 RealStringFormula: rval
   13                  | ival
   14                  | str
   15                  | LB RealStringFormula RB
   16                  | RealStringFormula DIV RealStringFormula
   17                  | RealStringFormula PLUS RealStringFormula
   18                  | RealStringFormula MINUS RealStringFormula
   19                  | RealStringFormula MUL RealStringFormula
   20                  | RealStringFormula POWER RealStringFormula
   21                  | FLOOR LB RealStringFormula RB
   22                  | MIN LB RealStringFormula COMMA RealStringFormula RB
   23                  | MAX LB RealStringFormula COMMA RealStringFormula RB

   24 GSPN: declarations definitions
   25     | declarations definitions redifinitions

   26 declarations: Constants Sizes Lists
   27             | Sizes Lists

   28 Constants: Constant
   29          | Constant Constants

   30 Sizes: NbPlaces NbTransitions
   31      | NbTransitions NbPlaces

   32 Constant: Const INT str EQ IntStringFormula SEMICOLON
   33         | Const DOUBLE str EQ RealStringFormula SEMICOLON

   34 Lists: PlacesList TransitionsList
   35      | TransitionsList PlacesList

   36 NbPlaces: NbPl EQ ival SEMICOLON
   37         | NbPl EQ str SEMICOLON

   38 NbTransitions: NbTr EQ ival SEMICOLON
   39              | NbTr EQ str SEMICOLON

   40 PlacesList: PList EQ '{' PLabels '}' SEMICOLON

   41 PLabels: str
   42        | PLabels COMMA str

   43 TransitionsList: TList EQ '{' TLabels '}' SEMICOLON

   44 TLabels: str
   45        | TLabels COMMA str

   46 definitions: PlacesDef TransitionsDef InArcs OutArcs
   47            | PlacesDef TransitionsDef InArcs OutArcs Inhibitors

   48 PlacesDef: marking EQ '{' PLACES '}' SEMICOLON

   49 PLACES: PLACE
   50       | PLACES PLACE

   51 PLACE: LB str COMMA IntStringFormula RB SEMICOLON

   52 TransitionsDef: transitions EQ '{' TRANSITIONS '}' SEMICOLON

   53 TRANSITIONS: TRANSITION
   54            | TRANSITIONS TRANSITION

   55 TRANSITION: LB str COMMA dist COMMA PRIORITY COMMA WEIGHT RB SEMICOLON
   56           | LB str COMMA dist COMMA PRIORITY COMMA WEIGHT COMMA MEMORY RB SEMICOLON
   57           | LB str COMMA EXPO LB RealStringFormula RB COMMA PRIORITY COMMA WEIGHT COMMA SERVICE RB SEMICOLON
   58           | LB str COMMA EXPO LB RealStringFormula RB COMMA PRIORITY COMMA WEIGHT COMMA SERVICE COMMA MEMORY RB SEMICOLON
   59           | LB str COMMA IMDT COMMA PRIORITY COMMA WEIGHT RB SEMICOLON

   60 WEIGHT: RealStringFormula

   61 PRIORITY: RealStringFormula

   62 SERVICE: SINGLE
   63        | INFINITE
   64        | MULTIPLE LB ival RB
   65        | MULTIPLE LB str RB

   66 MEMORY: AGEMEMORY
   67       | ENABLINGMEMORY

   68 dist: str LB params RB

   69 params: param
   70       | params COMMA param

   71 param: RealStringFormula

   72 InArcs: in EQ '{' incells '}' SEMICOLON

   73 incells: incell
   74        | incells incell

   75 incell: LB str COMMA str COMMA IntStringFormula RB SEMICOLON
   76       | LB str COMMA str RB SEMICOLON

   77 OutArcs: out EQ '{' outcells '}' SEMICOLON

   78 outcells: outcell
   79         | outcells outcell

   80 outcell: LB str COMMA str COMMA IntStringFormula RB SEMICOLON
   81        | LB str COMMA str RB SEMICOLON

   82 Inhibitors: inhibitor EQ '{' inhibcells '}' SEMICOLON

   83 inhibcells: inhibcell
   84           | inhibcells inhibcell

   85 inhibcell: LB str COMMA str COMMA IntStringFormula RB SEMICOLON
   86          | LB str COMMA str RB SEMICOLON

   87 redifinitions: TransitionsDef


Terminaux, suivis des règles où ils apparaissent

"end of file" (0) 0
'{' (123) 40 43 48 52 72 77 82
'}' (125) 40 43 48 52 72 77 82
error (256)
str (258) 2 14 32 33 37 39 41 42 44 45 51 55 56 57 58 59 65 68 75 76
    80 81 85 86
chr (259)
rval (260) 12
ival (261) 1 13 36 38 64
SEMICOLON (262) 32 33 36 37 38 39 40 43 48 51 52 55 56 57 58 59 72
    75 76 77 80 81 82 85 86
COMMA (263) 10 11 22 23 42 45 51 55 56 57 58 59 70 75 76 80 81 85 86
LB (264) 3 8 9 10 11 15 21 22 23 51 55 56 57 58 59 64 65 68 75 76 80
    81 85 86
RB (265) 3 8 9 10 11 15 21 22 23 51 55 56 57 58 59 64 65 68 75 76 80
    81 85 86
EQ (266) 32 33 36 37 38 39 40 43 48 52 72 77 82
DIV (267) 9 16
MUL (268) 6 19
PLUS (269) 4 17
MINUS (270) 5 18
POWER (271) 7 20
GspnName (272)
NbPl (273) 36 37
NbTr (274) 38 39
PList (275) 40
TList (276) 43
in (277) 72
out (278) 77
marking (279) 48
transitions (280) 52
Const (281) 32 33
INT (282) 32
DOUBLE (283) 33
inhibitor (284) 82
MIN (285) 10 22
MAX (286) 11 23
FLOOR (287) 8 9 21
SINGLE (288) 62
INFINITE (289) 63
MULTIPLE (290) 64 65
ENABLINGMEMORY (291) 67
AGEMEMORY (292) 66
IMDT (293) 59
EXPO (294) 57 58


Non-terminaux, suivis des règles où ils apparaissent

$accept (42)
    à gauche: 0
IntStringFormula (43)
    à gauche: 1 2 3 4 5 6 7 8 9 10 11, à droite: 3 4 5 6 7 8 9 10
    11 32 51 75 80 85
RealStringFormula (44)
    à gauche: 12 13 14 15 16 17 18 19 20 21 22 23, à droite: 15 16
    17 18 19 20 21 22 23 33 57 58 60 61 71
GSPN (45)
    à gauche: 24 25, à droite: 0
declarations (46)
    à gauche: 26 27, à droite: 24 25
Constants (47)
    à gauche: 28 29, à droite: 26 29
Sizes (48)
    à gauche: 30 31, à droite: 26 27
Constant (49)
    à gauche: 32 33, à droite: 28 29
Lists (50)
    à gauche: 34 35, à droite: 26 27
NbPlaces (51)
    à gauche: 36 37, à droite: 30 31
NbTransitions (52)
    à gauche: 38 39, à droite: 30 31
PlacesList (53)
    à gauche: 40, à droite: 34 35
PLabels (54)
    à gauche: 41 42, à droite: 40 42
TransitionsList (55)
    à gauche: 43, à droite: 34 35
TLabels (56)
    à gauche: 44 45, à droite: 43 45
definitions (57)
    à gauche: 46 47, à droite: 24 25
PlacesDef (58)
    à gauche: 48, à droite: 46 47
PLACES (59)
    à gauche: 49 50, à droite: 48 50
PLACE (60)
    à gauche: 51, à droite: 49 50
TransitionsDef (61)
    à gauche: 52, à droite: 46 47 87
TRANSITIONS (62)
    à gauche: 53 54, à droite: 52 54
TRANSITION (63)
    à gauche: 55 56 57 58 59, à droite: 53 54
WEIGHT (64)
    à gauche: 60, à droite: 55 56 57 58 59
PRIORITY (65)
    à gauche: 61, à droite: 55 56 57 58 59
SERVICE (66)
    à gauche: 62 63 64 65, à droite: 57 58
MEMORY (67)
    à gauche: 66 67, à droite: 56 58
dist (68)
    à gauche: 68, à droite: 55 56
params (69)
    à gauche: 69 70, à droite: 68 70
param (70)
    à gauche: 71, à droite: 69 70
InArcs (71)
    à gauche: 72, à droite: 46 47
incells (72)
    à gauche: 73 74, à droite: 72 74
incell (73)
    à gauche: 75 76, à droite: 73 74
OutArcs (74)
    à gauche: 77, à droite: 46 47
outcells (75)
    à gauche: 78 79, à droite: 77 79
outcell (76)
    à gauche: 80 81, à droite: 78 79
Inhibitors (77)
    à gauche: 82, à droite: 47
inhibcells (78)
    à gauche: 83 84, à droite: 82 84
inhibcell (79)
    à gauche: 85 86, à droite: 83 84
redifinitions (80)
    à gauche: 87, à droite: 25


état 0

    0 $accept: . GSPN "end of file"

    NbPl   décalage et aller à l'état 1
    NbTr   décalage et aller à l'état 2
    Const  décalage et aller à l'état 3

    GSPN           aller à l'état 4
    declarations   aller à l'état 5
    Constants      aller à l'état 6
    Sizes          aller à l'état 7
    Constant       aller à l'état 8
    NbPlaces       aller à l'état 9
    NbTransitions  aller à l'état 10


état 1

   36 NbPlaces: NbPl . EQ ival SEMICOLON
   37         | NbPl . EQ str SEMICOLON

    EQ  décalage et aller à l'état 11


état 2

   38 NbTransitions: NbTr . EQ ival SEMICOLON
   39              | NbTr . EQ str SEMICOLON

    EQ  décalage et aller à l'état 12


état 3

   32 Constant: Const . INT str EQ IntStringFormula SEMICOLON
   33         | Const . DOUBLE str EQ RealStringFormula SEMICOLON

    INT     décalage et aller à l'état 13
    DOUBLE  décalage et aller à l'état 14


état 4

    0 $accept: GSPN . "end of file"

    "end of file"  décalage et aller à l'état 15


état 5

   24 GSPN: declarations . definitions
   25     | declarations . definitions redifinitions

    marking  décalage et aller à l'état 16

    definitions  aller à l'état 17
    PlacesDef    aller à l'état 18


état 6

   26 declarations: Constants . Sizes Lists

    NbPl  décalage et aller à l'état 1
    NbTr  décalage et aller à l'état 2

    Sizes          aller à l'état 19
    NbPlaces       aller à l'état 9
    NbTransitions  aller à l'état 10


état 7

   27 declarations: Sizes . Lists

    PList  décalage et aller à l'état 20
    TList  décalage et aller à l'état 21

    Lists            aller à l'état 22
    PlacesList       aller à l'état 23
    TransitionsList  aller à l'état 24


état 8

   28 Constants: Constant .
   29          | Constant . Constants

    Const  décalage et aller à l'état 3

    $défaut  réduction par utilisation de la règle 28 (Constants)

    Constants  aller à l'état 25
    Constant   aller à l'état 8


état 9

   30 Sizes: NbPlaces . NbTransitions

    NbTr  décalage et aller à l'état 2

    NbTransitions  aller à l'état 26


état 10

   31 Sizes: NbTransitions . NbPlaces

    NbPl  décalage et aller à l'état 1

    NbPlaces  aller à l'état 27


état 11

   36 NbPlaces: NbPl EQ . ival SEMICOLON
   37         | NbPl EQ . str SEMICOLON

    str   décalage et aller à l'état 28
    ival  décalage et aller à l'état 29


état 12

   38 NbTransitions: NbTr EQ . ival SEMICOLON
   39              | NbTr EQ . str SEMICOLON

    str   décalage et aller à l'état 30
    ival  décalage et aller à l'état 31


état 13

   32 Constant: Const INT . str EQ IntStringFormula SEMICOLON

    str  décalage et aller à l'état 32


état 14

   33 Constant: Const DOUBLE . str EQ RealStringFormula SEMICOLON

    str  décalage et aller à l'état 33


état 15

    0 $accept: GSPN "end of file" .

    $défaut  accepter


état 16

   48 PlacesDef: marking . EQ '{' PLACES '}' SEMICOLON

    EQ  décalage et aller à l'état 34


état 17

   24 GSPN: declarations definitions .
   25     | declarations definitions . redifinitions

    transitions  décalage et aller à l'état 35

    $défaut  réduction par utilisation de la règle 24 (GSPN)

    TransitionsDef  aller à l'état 36
    redifinitions   aller à l'état 37


état 18

   46 definitions: PlacesDef . TransitionsDef InArcs OutArcs
   47            | PlacesDef . TransitionsDef InArcs OutArcs Inhibitors

    transitions  décalage et aller à l'état 35

    TransitionsDef  aller à l'état 38


état 19

   26 declarations: Constants Sizes . Lists

    PList  décalage et aller à l'état 20
    TList  décalage et aller à l'état 21

    Lists            aller à l'état 39
    PlacesList       aller à l'état 23
    TransitionsList  aller à l'état 24


état 20

   40 PlacesList: PList . EQ '{' PLabels '}' SEMICOLON

    EQ  décalage et aller à l'état 40


état 21

   43 TransitionsList: TList . EQ '{' TLabels '}' SEMICOLON

    EQ  décalage et aller à l'état 41


état 22

   27 declarations: Sizes Lists .

    $défaut  réduction par utilisation de la règle 27 (declarations)


état 23

   34 Lists: PlacesList . TransitionsList

    TList  décalage et aller à l'état 21

    TransitionsList  aller à l'état 42


état 24

   35 Lists: TransitionsList . PlacesList

    PList  décalage et aller à l'état 20

    PlacesList  aller à l'état 43


état 25

   29 Constants: Constant Constants .

    $défaut  réduction par utilisation de la règle 29 (Constants)


état 26

   30 Sizes: NbPlaces NbTransitions .

    $défaut  réduction par utilisation de la règle 30 (Sizes)


état 27

   31 Sizes: NbTransitions NbPlaces .

    $défaut  réduction par utilisation de la règle 31 (Sizes)


état 28

   37 NbPlaces: NbPl EQ str . SEMICOLON

    SEMICOLON  décalage et aller à l'état 44


état 29

   36 NbPlaces: NbPl EQ ival . SEMICOLON

    SEMICOLON  décalage et aller à l'état 45


état 30

   39 NbTransitions: NbTr EQ str . SEMICOLON

    SEMICOLON  décalage et aller à l'état 46


état 31

   38 NbTransitions: NbTr EQ ival . SEMICOLON

    SEMICOLON  décalage et aller à l'état 47


état 32

   32 Constant: Const INT str . EQ IntStringFormula SEMICOLON

    EQ  décalage et aller à l'état 48


état 33

   33 Constant: Const DOUBLE str . EQ RealStringFormula SEMICOLON

    EQ  décalage et aller à l'état 49


état 34

   48 PlacesDef: marking EQ . '{' PLACES '}' SEMICOLON

    '{'  décalage et aller à l'état 50


état 35

   52 TransitionsDef: transitions . EQ '{' TRANSITIONS '}' SEMICOLON

    EQ  décalage et aller à l'état 51


état 36

   87 redifinitions: TransitionsDef .

    $défaut  réduction par utilisation de la règle 87 (redifinitions)


état 37

   25 GSPN: declarations definitions redifinitions .

    $défaut  réduction par utilisation de la règle 25 (GSPN)


état 38

   46 definitions: PlacesDef TransitionsDef . InArcs OutArcs
   47            | PlacesDef TransitionsDef . InArcs OutArcs Inhibitors

    in  décalage et aller à l'état 52

    InArcs  aller à l'état 53


état 39

   26 declarations: Constants Sizes Lists .

    $défaut  réduction par utilisation de la règle 26 (declarations)


état 40

   40 PlacesList: PList EQ . '{' PLabels '}' SEMICOLON

    '{'  décalage et aller à l'état 54


état 41

   43 TransitionsList: TList EQ . '{' TLabels '}' SEMICOLON

    '{'  décalage et aller à l'état 55


état 42

   34 Lists: PlacesList TransitionsList .

    $défaut  réduction par utilisation de la règle 34 (Lists)


état 43

   35 Lists: TransitionsList PlacesList .

    $défaut  réduction par utilisation de la règle 35 (Lists)


état 44

   37 NbPlaces: NbPl EQ str SEMICOLON .

    $défaut  réduction par utilisation de la règle 37 (NbPlaces)


état 45

   36 NbPlaces: NbPl EQ ival SEMICOLON .

    $défaut  réduction par utilisation de la règle 36 (NbPlaces)


état 46

   39 NbTransitions: NbTr EQ str SEMICOLON .

    $défaut  réduction par utilisation de la règle 39 (NbTransitions)


état 47

   38 NbTransitions: NbTr EQ ival SEMICOLON .

    $défaut  réduction par utilisation de la règle 38 (NbTransitions)


état 48

   32 Constant: Const INT str EQ . IntStringFormula SEMICOLON

    str    décalage et aller à l'état 56
    ival   décalage et aller à l'état 57
    LB     décalage et aller à l'état 58
    MIN    décalage et aller à l'état 59
    MAX    décalage et aller à l'état 60
    FLOOR  décalage et aller à l'état 61

    IntStringFormula  aller à l'état 62


état 49

   33 Constant: Const DOUBLE str EQ . RealStringFormula SEMICOLON

    str    décalage et aller à l'état 63
    rval   décalage et aller à l'état 64
    ival   décalage et aller à l'état 65
    LB     décalage et aller à l'état 66
    MIN    décalage et aller à l'état 67
    MAX    décalage et aller à l'état 68
    FLOOR  décalage et aller à l'état 69

    RealStringFormula  aller à l'état 70


état 50

   48 PlacesDef: marking EQ '{' . PLACES '}' SEMICOLON

    LB  décalage et aller à l'état 71

    PLACES  aller à l'état 72
    PLACE   aller à l'état 73


état 51

   52 TransitionsDef: transitions EQ . '{' TRANSITIONS '}' SEMICOLON

    '{'  décalage et aller à l'état 74


état 52

   72 InArcs: in . EQ '{' incells '}' SEMICOLON

    EQ  décalage et aller à l'état 75


état 53

   46 definitions: PlacesDef TransitionsDef InArcs . OutArcs
   47            | PlacesDef TransitionsDef InArcs . OutArcs Inhibitors

    out  décalage et aller à l'état 76

    OutArcs  aller à l'état 77


état 54

   40 PlacesList: PList EQ '{' . PLabels '}' SEMICOLON

    str  décalage et aller à l'état 78

    PLabels  aller à l'état 79


état 55

   43 TransitionsList: TList EQ '{' . TLabels '}' SEMICOLON

    str  décalage et aller à l'état 80

    TLabels  aller à l'état 81


état 56

    2 IntStringFormula: str .

    $défaut  réduction par utilisation de la règle 2 (IntStringFormula)


état 57

    1 IntStringFormula: ival .

    $défaut  réduction par utilisation de la règle 1 (IntStringFormula)


état 58

    3 IntStringFormula: LB . IntStringFormula RB

    str    décalage et aller à l'état 56
    ival   décalage et aller à l'état 57
    LB     décalage et aller à l'état 58
    MIN    décalage et aller à l'état 59
    MAX    décalage et aller à l'état 60
    FLOOR  décalage et aller à l'état 61

    IntStringFormula  aller à l'état 82


état 59

   10 IntStringFormula: MIN . LB IntStringFormula COMMA IntStringFormula RB

    LB  décalage et aller à l'état 83


état 60

   11 IntStringFormula: MAX . LB IntStringFormula COMMA IntStringFormula RB

    LB  décalage et aller à l'état 84


état 61

    8 IntStringFormula: FLOOR . LB IntStringFormula RB
    9                 | FLOOR . LB IntStringFormula DIV IntStringFormula RB

    LB  décalage et aller à l'état 85


état 62

    4 IntStringFormula: IntStringFormula . PLUS IntStringFormula
    5                 | IntStringFormula . MINUS IntStringFormula
    6                 | IntStringFormula . MUL IntStringFormula
    7                 | IntStringFormula . POWER IntStringFormula
   32 Constant: Const INT str EQ IntStringFormula . SEMICOLON

    SEMICOLON  décalage et aller à l'état 86
    MUL        décalage et aller à l'état 87
    PLUS       décalage et aller à l'état 88
    MINUS      décalage et aller à l'état 89
    POWER      décalage et aller à l'état 90


état 63

   14 RealStringFormula: str .

    $défaut  réduction par utilisation de la règle 14 (RealStringFormula)


état 64

   12 RealStringFormula: rval .

    $défaut  réduction par utilisation de la règle 12 (RealStringFormula)


état 65

   13 RealStringFormula: ival .

    $défaut  réduction par utilisation de la règle 13 (RealStringFormula)


état 66

   15 RealStringFormula: LB . RealStringFormula RB

    str    décalage et aller à l'état 63
    rval   décalage et aller à l'état 64
    ival   décalage et aller à l'état 65
    LB     décalage et aller à l'état 66
    MIN    décalage et aller à l'état 67
    MAX    décalage et aller à l'état 68
    FLOOR  décalage et aller à l'état 69

    RealStringFormula  aller à l'état 91


état 67

   22 RealStringFormula: MIN . LB RealStringFormula COMMA RealStringFormula RB

    LB  décalage et aller à l'état 92


état 68

   23 RealStringFormula: MAX . LB RealStringFormula COMMA RealStringFormula RB

    LB  décalage et aller à l'état 93


état 69

   21 RealStringFormula: FLOOR . LB RealStringFormula RB

    LB  décalage et aller à l'état 94


état 70

   16 RealStringFormula: RealStringFormula . DIV RealStringFormula
   17                  | RealStringFormula . PLUS RealStringFormula
   18                  | RealStringFormula . MINUS RealStringFormula
   19                  | RealStringFormula . MUL RealStringFormula
   20                  | RealStringFormula . POWER RealStringFormula
   33 Constant: Const DOUBLE str EQ RealStringFormula . SEMICOLON

    SEMICOLON  décalage et aller à l'état 95
    DIV        décalage et aller à l'état 96
    MUL        décalage et aller à l'état 97
    PLUS       décalage et aller à l'état 98
    MINUS      décalage et aller à l'état 99
    POWER      décalage et aller à l'état 100


état 71

   51 PLACE: LB . str COMMA IntStringFormula RB SEMICOLON

    str  décalage et aller à l'état 101


état 72

   48 PlacesDef: marking EQ '{' PLACES . '}' SEMICOLON
   50 PLACES: PLACES . PLACE

    LB   décalage et aller à l'état 71
    '}'  décalage et aller à l'état 102

    PLACE  aller à l'état 103


état 73

   49 PLACES: PLACE .

    $défaut  réduction par utilisation de la règle 49 (PLACES)


état 74

   52 TransitionsDef: transitions EQ '{' . TRANSITIONS '}' SEMICOLON

    LB  décalage et aller à l'état 104

    TRANSITIONS  aller à l'état 105
    TRANSITION   aller à l'état 106


état 75

   72 InArcs: in EQ . '{' incells '}' SEMICOLON

    '{'  décalage et aller à l'état 107


état 76

   77 OutArcs: out . EQ '{' outcells '}' SEMICOLON

    EQ  décalage et aller à l'état 108


état 77

   46 definitions: PlacesDef TransitionsDef InArcs OutArcs .
   47            | PlacesDef TransitionsDef InArcs OutArcs . Inhibitors

    inhibitor  décalage et aller à l'état 109

    $défaut  réduction par utilisation de la règle 46 (definitions)

    Inhibitors  aller à l'état 110


état 78

   41 PLabels: str .

    $défaut  réduction par utilisation de la règle 41 (PLabels)


état 79

   40 PlacesList: PList EQ '{' PLabels . '}' SEMICOLON
   42 PLabels: PLabels . COMMA str

    COMMA  décalage et aller à l'état 111
    '}'    décalage et aller à l'état 112


état 80

   44 TLabels: str .

    $défaut  réduction par utilisation de la règle 44 (TLabels)


état 81

   43 TransitionsList: TList EQ '{' TLabels . '}' SEMICOLON
   45 TLabels: TLabels . COMMA str

    COMMA  décalage et aller à l'état 113
    '}'    décalage et aller à l'état 114


état 82

    3 IntStringFormula: LB IntStringFormula . RB
    4                 | IntStringFormula . PLUS IntStringFormula
    5                 | IntStringFormula . MINUS IntStringFormula
    6                 | IntStringFormula . MUL IntStringFormula
    7                 | IntStringFormula . POWER IntStringFormula

    RB     décalage et aller à l'état 115
    MUL    décalage et aller à l'état 87
    PLUS   décalage et aller à l'état 88
    MINUS  décalage et aller à l'état 89
    POWER  décalage et aller à l'état 90


état 83

   10 IntStringFormula: MIN LB . IntStringFormula COMMA IntStringFormula RB

    str    décalage et aller à l'état 56
    ival   décalage et aller à l'état 57
    LB     décalage et aller à l'état 58
    MIN    décalage et aller à l'état 59
    MAX    décalage et aller à l'état 60
    FLOOR  décalage et aller à l'état 61

    IntStringFormula  aller à l'état 116


état 84

   11 IntStringFormula: MAX LB . IntStringFormula COMMA IntStringFormula RB

    str    décalage et aller à l'état 56
    ival   décalage et aller à l'état 57
    LB     décalage et aller à l'état 58
    MIN    décalage et aller à l'état 59
    MAX    décalage et aller à l'état 60
    FLOOR  décalage et aller à l'état 61

    IntStringFormula  aller à l'état 117


état 85

    8 IntStringFormula: FLOOR LB . IntStringFormula RB
    9                 | FLOOR LB . IntStringFormula DIV IntStringFormula RB

    str    décalage et aller à l'état 56
    ival   décalage et aller à l'état 57
    LB     décalage et aller à l'état 58
    MIN    décalage et aller à l'état 59
    MAX    décalage et aller à l'état 60
    FLOOR  décalage et aller à l'état 61

    IntStringFormula  aller à l'état 118


état 86

   32 Constant: Const INT str EQ IntStringFormula SEMICOLON .

    $défaut  réduction par utilisation de la règle 32 (Constant)


état 87

    6 IntStringFormula: IntStringFormula MUL . IntStringFormula

    str    décalage et aller à l'état 56
    ival   décalage et aller à l'état 57
    LB     décalage et aller à l'état 58
    MIN    décalage et aller à l'état 59
    MAX    décalage et aller à l'état 60
    FLOOR  décalage et aller à l'état 61

    IntStringFormula  aller à l'état 119


état 88

    4 IntStringFormula: IntStringFormula PLUS . IntStringFormula

    str    décalage et aller à l'état 56
    ival   décalage et aller à l'état 57
    LB     décalage et aller à l'état 58
    MIN    décalage et aller à l'état 59
    MAX    décalage et aller à l'état 60
    FLOOR  décalage et aller à l'état 61

    IntStringFormula  aller à l'état 120


état 89

    5 IntStringFormula: IntStringFormula MINUS . IntStringFormula

    str    décalage et aller à l'état 56
    ival   décalage et aller à l'état 57
    LB     décalage et aller à l'état 58
    MIN    décalage et aller à l'état 59
    MAX    décalage et aller à l'état 60
    FLOOR  décalage et aller à l'état 61

    IntStringFormula  aller à l'état 121


état 90

    7 IntStringFormula: IntStringFormula POWER . IntStringFormula

    str    décalage et aller à l'état 56
    ival   décalage et aller à l'état 57
    LB     décalage et aller à l'état 58
    MIN    décalage et aller à l'état 59
    MAX    décalage et aller à l'état 60
    FLOOR  décalage et aller à l'état 61

    IntStringFormula  aller à l'état 122


état 91

   15 RealStringFormula: LB RealStringFormula . RB
   16                  | RealStringFormula . DIV RealStringFormula
   17                  | RealStringFormula . PLUS RealStringFormula
   18                  | RealStringFormula . MINUS RealStringFormula
   19                  | RealStringFormula . MUL RealStringFormula
   20                  | RealStringFormula . POWER RealStringFormula

    RB     décalage et aller à l'état 123
    DIV    décalage et aller à l'état 96
    MUL    décalage et aller à l'état 97
    PLUS   décalage et aller à l'état 98
    MINUS  décalage et aller à l'état 99
    POWER  décalage et aller à l'état 100


état 92

   22 RealStringFormula: MIN LB . RealStringFormula COMMA RealStringFormula RB

    str    décalage et aller à l'état 63
    rval   décalage et aller à l'état 64
    ival   décalage et aller à l'état 65
    LB     décalage et aller à l'état 66
    MIN    décalage et aller à l'état 67
    MAX    décalage et aller à l'état 68
    FLOOR  décalage et aller à l'état 69

    RealStringFormula  aller à l'état 124


état 93

   23 RealStringFormula: MAX LB . RealStringFormula COMMA RealStringFormula RB

    str    décalage et aller à l'état 63
    rval   décalage et aller à l'état 64
    ival   décalage et aller à l'état 65
    LB     décalage et aller à l'état 66
    MIN    décalage et aller à l'état 67
    MAX    décalage et aller à l'état 68
    FLOOR  décalage et aller à l'état 69

    RealStringFormula  aller à l'état 125


état 94

   21 RealStringFormula: FLOOR LB . RealStringFormula RB

    str    décalage et aller à l'état 63
    rval   décalage et aller à l'état 64
    ival   décalage et aller à l'état 65
    LB     décalage et aller à l'état 66
    MIN    décalage et aller à l'état 67
    MAX    décalage et aller à l'état 68
    FLOOR  décalage et aller à l'état 69

    RealStringFormula  aller à l'état 126


état 95

   33 Constant: Const DOUBLE str EQ RealStringFormula SEMICOLON .

    $défaut  réduction par utilisation de la règle 33 (Constant)


état 96

   16 RealStringFormula: RealStringFormula DIV . RealStringFormula

    str    décalage et aller à l'état 63
    rval   décalage et aller à l'état 64
    ival   décalage et aller à l'état 65
    LB     décalage et aller à l'état 66
    MIN    décalage et aller à l'état 67
    MAX    décalage et aller à l'état 68
    FLOOR  décalage et aller à l'état 69

    RealStringFormula  aller à l'état 127


état 97

   19 RealStringFormula: RealStringFormula MUL . RealStringFormula

    str    décalage et aller à l'état 63
    rval   décalage et aller à l'état 64
    ival   décalage et aller à l'état 65
    LB     décalage et aller à l'état 66
    MIN    décalage et aller à l'état 67
    MAX    décalage et aller à l'état 68
    FLOOR  décalage et aller à l'état 69

    RealStringFormula  aller à l'état 128


état 98

   17 RealStringFormula: RealStringFormula PLUS . RealStringFormula

    str    décalage et aller à l'état 63
    rval   décalage et aller à l'état 64
    ival   décalage et aller à l'état 65
    LB     décalage et aller à l'état 66
    MIN    décalage et aller à l'état 67
    MAX    décalage et aller à l'état 68
    FLOOR  décalage et aller à l'état 69

    RealStringFormula  aller à l'état 129


état 99

   18 RealStringFormula: RealStringFormula MINUS . RealStringFormula

    str    décalage et aller à l'état 63
    rval   décalage et aller à l'état 64
    ival   décalage et aller à l'état 65
    LB     décalage et aller à l'état 66
    MIN    décalage et aller à l'état 67
    MAX    décalage et aller à l'état 68
    FLOOR  décalage et aller à l'état 69

    RealStringFormula  aller à l'état 130


état 100

   20 RealStringFormula: RealStringFormula POWER . RealStringFormula

    str    décalage et aller à l'état 63
    rval   décalage et aller à l'état 64
    ival   décalage et aller à l'état 65
    LB     décalage et aller à l'état 66
    MIN    décalage et aller à l'état 67
    MAX    décalage et aller à l'état 68
    FLOOR  décalage et aller à l'état 69

    RealStringFormula  aller à l'état 131


état 101

   51 PLACE: LB str . COMMA IntStringFormula RB SEMICOLON

    COMMA  décalage et aller à l'état 132


état 102

   48 PlacesDef: marking EQ '{' PLACES '}' . SEMICOLON

    SEMICOLON  décalage et aller à l'état 133


état 103

   50 PLACES: PLACES PLACE .

    $défaut  réduction par utilisation de la règle 50 (PLACES)


état 104

   55 TRANSITION: LB . str COMMA dist COMMA PRIORITY COMMA WEIGHT RB SEMICOLON
   56           | LB . str COMMA dist COMMA PRIORITY COMMA WEIGHT COMMA MEMORY RB SEMICOLON
   57           | LB . str COMMA EXPO LB RealStringFormula RB COMMA PRIORITY COMMA WEIGHT COMMA SERVICE RB SEMICOLON
   58           | LB . str COMMA EXPO LB RealStringFormula RB COMMA PRIORITY COMMA WEIGHT COMMA SERVICE COMMA MEMORY RB SEMICOLON
   59           | LB . str COMMA IMDT COMMA PRIORITY COMMA WEIGHT RB SEMICOLON

    str  décalage et aller à l'état 134


état 105

   52 TransitionsDef: transitions EQ '{' TRANSITIONS . '}' SEMICOLON
   54 TRANSITIONS: TRANSITIONS . TRANSITION

    LB   décalage et aller à l'état 104
    '}'  décalage et aller à l'état 135

    TRANSITION  aller à l'état 136


état 106

   53 TRANSITIONS: TRANSITION .

    $défaut  réduction par utilisation de la règle 53 (TRANSITIONS)


état 107

   72 InArcs: in EQ '{' . incells '}' SEMICOLON

    LB  décalage et aller à l'état 137

    incells  aller à l'état 138
    incell   aller à l'état 139


état 108

   77 OutArcs: out EQ . '{' outcells '}' SEMICOLON

    '{'  décalage et aller à l'état 140


état 109

   82 Inhibitors: inhibitor . EQ '{' inhibcells '}' SEMICOLON

    EQ  décalage et aller à l'état 141


état 110

   47 definitions: PlacesDef TransitionsDef InArcs OutArcs Inhibitors .

    $défaut  réduction par utilisation de la règle 47 (definitions)


état 111

   42 PLabels: PLabels COMMA . str

    str  décalage et aller à l'état 142


état 112

   40 PlacesList: PList EQ '{' PLabels '}' . SEMICOLON

    SEMICOLON  décalage et aller à l'état 143


état 113

   45 TLabels: TLabels COMMA . str

    str  décalage et aller à l'état 144


état 114

   43 TransitionsList: TList EQ '{' TLabels '}' . SEMICOLON

    SEMICOLON  décalage et aller à l'état 145


état 115

    3 IntStringFormula: LB IntStringFormula RB .

    $défaut  réduction par utilisation de la règle 3 (IntStringFormula)


état 116
